[gd_scene load_steps=2 format=3 uid="uid://dhw7kxqy4cjrf"]

[ext_resource type="Script" path="res://modules/world_player/ui/player_hud.gd" id="1_hud"]

[node name="PlayerHUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="ModeIndicator" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 40.0
text = "PLAY"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BuildInfoLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = 60.0
text = ""
horizontal_alignment = 2
vertical_alignment = 1

[node name="Crosshair" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2

[node name="CrosshairDot" type="ColorRect" parent="Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -2.0
offset_right = 2.0
offset_bottom = 2.0
color = Color(1, 1, 1, 0.8)

[node name="InteractionPrompt" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -150.0
offset_right = 100.0
offset_bottom = -120.0
text = "[E] Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusBars" type="VBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = -20.0

[node name="HealthBar" type="ProgressBar" parent="StatusBars"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="HealthBarFill" type="StyleBoxFlat" parent="StatusBars/HealthBar"]

[node name="StaminaBar" type="ProgressBar" parent="StatusBars"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false

[node name="Compass" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -25.0
offset_top = 10.0
offset_right = 25.0
offset_bottom = 40.0
text = "N"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HotbarPanel" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -425.0
offset_top = -85.0
offset_right = 425.0
offset_bottom = -10.0

[node name="HotbarContainer" type="HBoxContainer" parent="HotbarPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
alignment = 1

[node name="Slot0" type="Label" parent="HotbarPanel/HotbarContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "[1]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot1" type="Label" parent="HotbarPanel/HotbarContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "[2]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot2" type="Label" parent="HotbarPanel/HotbarContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "[3]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot3" type="Label" parent="HotbarPanel/HotbarContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "[4]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot4" type="Label" parent="HotbarPanel/HotbarContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "[5]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot5" type="Label" parent="HotbarPanel/HotbarContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "[6]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot6" type="Label" parent="HotbarPanel/HotbarContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "[7]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot7" type="Label" parent="HotbarPanel/HotbarContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "[8]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot8" type="Label" parent="HotbarPanel/HotbarContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "[9]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Slot9" type="Label" parent="HotbarPanel/HotbarContainer"]
custom_minimum_size = Vector2(80, 60)
layout_mode = 2
text = "[0]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectedItemLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 440.0
offset_top = -70.0
offset_right = 640.0
offset_bottom = -30.0
text = "Fists"
horizontal_alignment = 0
vertical_alignment = 1

[node name="GameMenu" type="Control" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuBackground" type="ColorRect" parent="GameMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="MenuPanel" type="VBoxContainer" parent="GameMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
alignment = 1

[node name="Title" type="Label" parent="GameMenu/MenuPanel"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="GameMenu/MenuPanel"]
layout_mode = 2
text = "Resume"

[node name="OptionsButton" type="Button" parent="GameMenu/MenuPanel"]
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="GameMenu/MenuPanel"]
layout_mode = 2
text = "Quit"
